# einsum_is_all_you_need

./: README.md  autodiff.py  einsum.py  main.py  network_graph.py  plot.py  primitives.py  pyproject.toml  tensor.py  tracer.py  utils.py
